--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ tensorboard==2.8.0
 tensorflow==2.8.0
 tensorflow-estimator==2.8.0
 termcolor==1.1.0
-urllib3==1.26.9
+urllib3
 Werkzeug==2.1.1
 wrapt==1.14.0
 zipp==3.8.0
